# gengchou

./: .gitignore  Cargo.toml  DEPENDENCY_LICENSES.md  FORK-NOTES.md  LICENSE  PROVENANCE.md  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  rust-toolchain.toml
.github/release-notes/: v2.0.1.md  v2.1.0.md  v2.2.0.md  v2.2.1.md  v2.2.2.md  v2.2.3.md  v2.2.4.md  v2.3.0.md  v2.3.1.md  v2.3.2.md
.github/workflows/: ci.yml  release.yml
docs/: IDENTITY_MIGRATION.md  RELEASE_CHECKLIST.md
src/: compact_layout.rs  compact_view.rs  diagnose.rs  main.rs  migration.rs  models.rs  native_interop.rs  poller.rs  settings.rs  theme.rs  tray_icon.rs  updater.rs  window.rs
src/icons/providers/source/: README.md
src/localization/: dutch.rs  english.rs  french.rs  german.rs  japanese.rs  korean.rs  mod.rs  portuguese_brazil.rs  russian.rs  simplified_chinese.rs  spanish.rs  traditional_chinese.rs
tests/: legacy_updater_inbound_e2e.ps1  migration_e2e.ps1  update_ready_inbound_e2e.ps1  updater_e2e.ps1  v2.2.3_to_v2.2.4_real_e2e.ps1  v2.2.3_updater_bridge_e2e.ps1
tests/fixtures/: atomic_file.rs  updater_parent.rs  updater_vnext.rs  updater_vnext_fail.rs
tools/: check-portable-runtime.ps1  check-retired-identity.ps1  downsample_provider_tile.py  generate_provider_logos.mjs  render-readme-images.ps1  verify-v2.2.4-migration.ps1
