[package]
name = "ai-usage-monitor"
# Versioning starts at 2.x, above the original project's 1.x line: also
# guarantees the manual update check never treats an upstream 1.x release as
# newer (see updater::is_version_newer).
version = "2.1.0"
edition = "2021"
rust-version = "1.86"
license = "MIT"
description = "Windows taskbar and tray usage monitor for Claude Code, Codex, and Antigravity"
homepage = "https://github.com/yinjianxxx/ai-usage-monitor"
repository = "https://github.com/yinjianxxx/ai-usage-monitor"

[package.metadata.winres]
CompanyName = "yinjianxxx"
ProductName = "AI Usage Monitor"
FileDescription = "AI Usage Monitor"
OriginalFilename = "ai-usage-monitor.exe"
InternalName = "AIUsageMonitor"
Comments = "Originally derived from CodeZeno/Claude-Code-Usage-Monitor"
LegalCopyright = "Copyright (C) 2025 Craig Constable; modifications Copyright (C) 2026 yinjianxxx"

[dependencies]
ureq = { version = "2", default-features = false, features = ["native-tls", "json", "proxy-from-env"] }
native-tls = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_System_SystemInformation",
    "Win32_System_Time",
    "Win32_System_RemoteDesktop",
    "Win32_Graphics_Dwm",
    "Win32_Storage_FileSystem",
]

[build-dependencies]
winres = "0.1"

# NOTE: no `panic = "abort"` here. Aborting turned any stray panic (Win32
# call failing during an RDP session switch, for example) into a silent
# process death. Panics now unwind into the catch_unwind guards in window.rs
# and get recorded by the panic hook in main.rs.
[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
